# whodunnit-hackathon

./: .gitignore  README.md  app.py  launcher.py  main.py  pyproject.toml  state.py
battle/: battles.py  jobs.py  moves.py  npc_characters.py
battle/actions/: model.py
battle/characters/: model.py
battle/jobs/: model.py
battle/moves/: model.py
battle/players/: ai_player.py  human_player.py  model.py
battle/side_effects/: base.py  interface.py
battle_configuration/: jobs.py  moves.py  npc_characters.py
engine/battle/: action.py  ai_player.py  battles.py  character.py  human_player.py  job.py  move.py  player.py
engine/fishing/: fishing.py  models.py
fishing/: fish_groups.py  fish_species.py  reel_input.py
game/: __init__.py  state.py
interactions/: model.py
models/: interaction.py  person.py
night_of_1000_dans/: app.py  state.py
persons/: model.py
places/: model.py
printer/: __init__.py  theme.py
prologue/: alarm.py  arrival.py  coffee.py  create_character.py  debug_fight_setup.py  door.py  elevator.py  final_boss.py  intro.py  murder.py  slack.py  the_end.py  title.py
rooms/: model.py  registry.py
scenes/: alarm.py  arrival.py  bathroom.py  coffee.py  create_character.py  dan_b_interview.py  dan_i_admission.py  dan_i_interview.py  dan_s_interview.py  daniel_e_interview.py  debug_fight_setup.py  declare_murderer.py  dee_interview.py  door.py  elevator.py  engineering_table.py  final_boss.py  intro.py  joy_interview.py  kitchen.py  model.py  murder.py  room.py  slack.py  the_end.py  title.py
whodunnit/: app.py  state.py
(+99 files in other folders)
