[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
rich = "^12.3.0"
pydantic = "^1.9.0"
black = "^22.3.0"
flake8 = "^4.0.1"
pyinstaller = "^5.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
